<resources>
    <!-- Basic words -->
    <string name="accept">Accept</string>
    <string name="accessibility">Accessibility</string>
    <string name="account">Account</string>
    <string name="admin">Admin</string>
    <string name="anonymous">Anonymous</string>
    <string name="apply">Apply</string>
    <string name="block">Block</string>
    <string name="cancel">Cancel</string>
    <string name="city">City</string>
    <string name="clear">Clear</string>
    <string name="confirm">Confirm</string>
    <string name="delete">Delete</string>
    <string name="description">Description</string>
    <string name="edit">Edit</string>
    <string name="email">Email</string>
    <string name="email_address">Email address</string>
    <string name="error">Error</string>
    <string name="first_name">First name</string>
    <string name="go_back">Go Back</string>
    <string name="homepage">Homepage</string>
    <string name="identifier">Identifier</string>
    <string name="image">Image</string>
    <string name="language">Language</string>
...
    <string name="listings">Listings</string>
    <string name="location">Location</string>
    <string name="max">Max</string>
    <string name="message">Message</string>
    <string name="min">Min</string>
    <string name="most_recent">Most Recent</string>
    <string name="name">Name</string>
    <string name="not_available">Not available</string>
    <string name="not_set">Not set</string>
    <string name="notifications">Notifications</string>
    <string name="ok">OK</string>
    <string name="optional">optional</string>
    <string name="phone">Phone</string>
    <string name="photos">Photos</string>
    <string name="price">Price</string>
    <string name="privacy">Privacy</string>
    <string name="private_accommodation">Private Accommodation</string>
...
    <string name="residency">Residency</string>
    <string name="restart">Restart</string>
    <string name="retry">Retry</string>
    <string name="review">Review</string>
    <string name="reviews">Reviews</string>
    <string name="room_type">Room Type</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="see_original">See original</string>
    <string name="size">Size</string>
    <string name="start_date">Start Date</string>
    <string name="starting">Starting</string>
    <string name="title">Title</string>
    <string name="unblock">Unblock</string>
    <string name="unexpected_error">Unexpected error</string>
    <string name="university">University</string>
    <string name="supermarket">Supermarket</string>
    <string name="unknown">Unknown</string>
    <string name="user">User</string>
    <string name="website">Website</string>


    <!-- RoomType -->
    <string name="studio">Studio</string>
    <string name="apartment">Apartment</string>
    <string name="room_in_flatshare">Room in flatshare</string>

    <!-- AdminPageScreen -->
    <string name="admin_page_admins_only">Admins only.</string>
    <string name="admin_page_title">Admin Page</string>
    <string name="admin_page_image_id">Image ID</string>
    <string name="admin_page_select_location">Select Location</string>

    <!-- AdminPageViewModel -->
    <string name="admin_page_email_required">Email is required for an Admin.</string>
    <string name="admin_page_email_invalid">Please enter a valid email address.</string>
    <string name="admin_page_name_required">Name is required.</string>
    <string name="admin_page_location_required">Location is required.</string>
    <string name="admin_page_description_required_city">Description is required for a City.</string>
    <string name="admin_page_image_id_required_city">Image is required for a City.</string>
    <string name="admin_page_city_name_required_residency">City name is required for a Residency.</string>
    <string name="admin_page_city_name_required_university">City name is required for a University.</string>
    <string name="admin_page_email_required_university">Email is required for a University.</string>
    <string name="admin_page_phone_required_university">Phone is required for a University.</string>
    <string name="admin_page_website_required_university">Website URL is required for a University.</string>
    <string name="admin_page_already_admin">Error: The user inserted is already an admin!</string>
    <string name="admin_page_added_as_admin">%1$s has been added as an admin</string>
    <string name="admin_page_saved_successfully">Saved successfully!</string>
    <string name="admin_page_error_unknown">Error: unknown</string>
    <string name="admin_page_error">Error</string>
    <string name="admin_page_confirm_add_admin">Confirm you want to add %1$s as an admin</string>
    <string name="admin_page_ok">OK</string>
    <string name="admin_page_website_url">%1$s URL</string>

...
    <string name="sanitized_text_fields_last_name_length">Last name is too long</string>
    <string name="sanitized_text_fields_last_name_format">Invalid last name</string>
    <string name="sanitized_text_fields_phone_required">Phone is required</string>
    <string name="sanitized_text_fields_phone_length">Phone must be 9 digits</string>
    <string name="sanitized_text_fields_phone_leading_zero">No leading zero allowed</string>
    <string name="sanitized_text_fields_phone_format">Invalid phone format</string>
    <string name="sanitized_text_fields_email_required">Email is required</string>
    <string name="sanitized_text_fields_email_length">Email is too long</string>
    <string name="sanitized_text_fields_email_format">Invalid email</string>
    <string name="sanitized_text_fields_search_required">Enter a search term</string>
    <string name="sanitized_text_fields_title_required">Title is required</string>
    <string name="sanitized_text_fields_title_length">Title is too long</string>
    <string name="sanitized_text_fields_room_size_format">Use one decimal (e.g., 18.5)</string>
...
