...
    const val RESTART_DIALOG_RESTART_BUTTON = "profileRestartDialogRestart"
  }

  object BrowseCityTags {
    const val ROOT = "browseCityRoot"
    const val BACK_BUTTON = "browseCityBackButton"
    const val LOCATION_BUTTON = "browseCityLocationButton"

    const val TAB_REVIEWS = "browseCityTabReviews"
    const val TAB_LISTINGS = "browseCityTabListings"

    const val LISTING_LIST = "browseCityListingList"
    const val RESIDENCY_LIST = "browseCityResidencyList"
...
    const val PRICE_FIELD = "priceField"

    const val DESCRIPTION_FIELD = "descField"

    const val GRADE_FIELD = "gradeField"

    const val DELETE_BUTTON = "deleteButton"

    const val SAVE_BUTTON = "saveButton"

    const val REVIEW_TITLE = "reviewTitleField"
    const val PHOTOS = "editReviewPhotos"
  }

  object CustomDatePickerDialogTags {
...
    const val DELETE_BUTTON = "deleteButton"
    const val SAVE_BUTTON = "saveButton"
    const val CUSTOM_LOCATION_BUTTON = "customLocationButton"
  }

  object AdminPageTags {
    const val CHIP_CITY = "adminPageChipCity"
    const val CHIP_RESIDENCY = "adminPageChipResidency"
    const val CHIP_UNIVERSITY = "adminPageChipUniversity"
    const val CHIP_ADMIN = "adminPageChipAdmin"
    const val LOCATION_BUTTON = "adminPageLocationButton"
    const val SAVE_BUTTON = "adminPageSaveButton"
    const val PHOTOS = "adminPagePhotos"
    const val RESIDENCY_DROPDOWN = "adminPageResidencyDropdown"
  }

  object AddPhotoButtonTags {
    const val BUTTON = "addPhotoButton"
    const val DIALOG = "addPhotoDialog"
    const val CAMERA_BUTTON_TEXT = "addPhotoCameraButtonText"
    const val GALLERY_BUTTON_TEXT = "addPhotoGalleryButtonText"
  }

  object SettingsTags {
...
